--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="coment">Comentario: </string>
+    <string name="coment">COMENTARIO </string>
+    <string name="comentarioadd">Comentario:  </string>
     <string name="hint">Escribe aquí tu comentario</string>
     <string name="guardar">Guardar</string>
     <string name="Título">Título: </string>
